--- a/src/App.css
+++ b/src/App.css
@@ -23,6 +23,10 @@
   color: #61dafb;
 }
 
+body {
+  background-color: #f0efed;
+}
+
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
