--- a/src/App.css
+++ b/src/App.css
@@ -1,37 +1,17 @@
-.App {
-  text-align: center;
+.background {
+  height: 100vh;
+  background-image: url('./images/banner.png');
+  background-repeat: no-repeat;
+  background-size: cover;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
-  pointer-events: none;
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
+.background-gradient {
+  height: 100vh;
+  overflow: hidden scroll;
+  background-color: rgba(255, 255, 255, 0.9);
 }
 
 body {
-  background-color: lightgray;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+  background: rgb(2,0,36);
+  background: linear-gradient(0deg, rgba(2,0,36,1) 0%, rgba(180,124,207,1) 100%);
 }
